--- a/firebase.json
+++ b/firebase.json
@@ -51,6 +51,10 @@
       {
         "source": "**",
         "destination": "/index.html"
+      },
+      {
+        "source": "/api/**",
+        "function": "api"
       }
     ]
   }
